--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <p>Victor Salomon Salazar  Hernandez</p>
         </div>
         <div class="founder" id="founder5">
-            <img src="cris.jpg" alt="Founder 5">
-            <p>Crish Alberto De La Fuente</p>
+            <img src="yoryel.jpg" alt="Founder 5">
+            <p>Joryel Reyes Aguilar</p>
         </div>
     </section>
 </main>
